# letscrawl

./: .coverage  .gitignore  .pre-commit-config.yaml  .pydocstyle  LICENSE  MODULE_MAP.md  Makefile  README.MD  README.md  config.py  crawler.py  create_config.py  fetcher.py  items.csv  main.py  my_configs.py  mypy.ini  package-lock.json  pyproject.toml  requirements.txt  ruff.toml  security.py  test.html  todo1.md  todo2.md  url_utils.py
.github/workflows/: ci.yml
doc/: ARCHITECTURE.md  IMPROVEMENTS.md  REFACTOR_PLAN.md
doc/legacy/tests/: README.md
extraction/: __init__.py  browser.py  runner.py  strategies.py
legacy/: README.md  crawler.py  fetcher.py
legacy/tests/: test_crawler.py  test_fetcher.py  test_url_utils.py
models/: __init__.py  canonical.py  feed.py  item.py  news.py  source.py
normalize/: __init__.py  articles.py  feeds.py
outputs/: __init__.py  filenames.py  writers.py
sources/: __init__.py  news.py  registry.py  rss.py
tests/: conftest.py  test_crawler.py  test_fetcher.py  test_security.py  test_url_utils.py
utils/: data_utils.py  logger.py  scraper_utils.py
