[project]
name = "letscrawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.2",
    "crawl4ai>=0.8.0",
    "fake-useragent>=2.0.3",
    "lxml>=5.3",
    "mypy>=1.11.0",
    "pandas>=2.1.3",
    "pre-commit>=3.8.0",
    "pydantic>=2.10.6",
    "pydocstyle>=6.3.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
    "ruff>=0.8.0",
    "selenium>=4.15.2",
    "tenacity>=8.2.0",
    "tqdm>=4.66.3",
    "types-requests>=2.32.0",
    "webdriver-manager>=4.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
