[project]
name = "letscrawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "crawl4ai>=0.8.0",
    "lxml>=6.1.0",
    "mypy>=1.11.0",
    "pandas>=2.1.3",
    "pre-commit>=3.8.0",
    "pydantic>=2.10.6",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.4",
    "ruff>=0.8.0",
    "tqdm>=4.66.3",
    "types-requests>=2.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.3",
    "ruff>=0.15.8",
]
